--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Hi fromEdwin!</title>
+		<title>Hello fromEdwin!</title>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
