--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-		<img 
-			src="/assets/edwin.svg" 
-			alt="edwin" />
+		<img src="/assets/edwin.svg" alt="edwin" />
 	</body>
 </html>
